# robot-tool-mcp

./: .gitignore  README.md  pyproject.toml
.github/: DEPLOYMENT.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/robot_mcp/: __init__.py  _runner.py  server.py
src/robot_mcp/commands/: __init__.py  _common.py  annotate.py  chain.py  collapse.py  convert.py  diff.py  expand.py  explain.py  export.py  extract.py  filter.py  materialize.py  measure.py  merge.py  mirror.py  query.py  reason.py  reduce.py  relax.py  remove.py  rename.py  repair.py  report.py  template.py  unmerge.py  validate_profile.py  verify.py
tests/: conftest.py  test_chain.py  test_commands.py  test_common.py  test_runner.py  test_server.py
