[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-tool-mcp"
version = "1.2.0"
description = "MCP server wrapping the ROBOT ontology CLI tool"
requires-python = ">=3.11"
readme = "README.md"
license = {text="BSD 2-Clause License"}
authors = [
    {name = "Josef Hardi"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
robot-mcp = "robot_mcp.server:main"
robot-tool-mcp = "robot_mcp.server:main"

[project.urls]
Homepage = "https://github.com/musen-lab/robot-tool-mcp"
Repository = "https://github.com/musen-lab/robot-tool-mcp"
Issues = "https://github.com/musen-lab/robot-tool-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/robot_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
